Add check subscribe

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BOT_TOKEN=6365812849:AAHpxBBjc8vzrmIUvDrPQ3zF-et_p2VmVHA
 DATABASE_URL=postgresql+asyncpg://postgres:04052003x@localhost/projectbot_db
+CHANNEL_NAME=channeltestbackend
