Add loger sqlalchemy and handler faq message

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ BOT_TOKEN=6365812849:AAHpxBBjc8vzrmIUvDrPQ3zF-et_p2VmVHA
 DATABASE_URL=postgresql+asyncpg://postgres:04052003x@localhost/projectbot_db
 CHANNEL_NAME=channeltestbackend
 GROUP_NAME=grouptestbackend
+BOT_USERNAME=testbackenddjangoaiogram3_bot
