--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DATABASE_URL=postgresql+asyncpg://postgres:04052003x@localhost/projectbot_db
 CHANNEL_NAME=channeltestbackend
 GROUP_NAME=grouptestbackend
 BOT_USERNAME=testbackenddjangoaiogram3_bot
-TOKEN_KASSA=381764678:TEST:82276
+TOKEN_KASSA=401643678:TEST:4caaeca0-9dcc-4095-827b-d97a331ee1ed
