--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.2.0
 certifi==2024.2.2
+et-xmlfile==1.1.0
 frozenlist==1.4.1
 greenlet==3.0.3
 idna==3.6
@@ -17,6 +18,7 @@ Mako==1.3.2
 MarkupSafe==2.1.5
 multidict==6.0.5
 numpy==1.26.4
+openpyxl==3.1.2
 pandas==2.2.1
 pydantic==2.5.3
 pydantic_core==2.14.6
